# Agentic-News-Verifier

./: Dockerfile  LICENSE  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.url
server/: app.py  logic.py  main.py  tasks.py
