[build-system]
requires = ["setuptools>=61.0", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-fake-news-verifier"
version = "0.1.0"
description = "Agentic News Verification Environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "httpx",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.main:main"

[tool.setuptools]
packages = ["server"]
