[build-system]
requires = ["setuptools>=61.0", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-fake-news-verifier"
version = "1.0.0"
description = "Agentic News Verification Environment for Meta PyTorch Hackathon"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0",
    "httpx",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
